--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
           <button type="submit">Submit</button>
         </form>
-        <p id="userInfo"></p>
+        <section id="section"></section>
       </div>
     </section>
 
