--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
           <input type="text" name="fullName" />
           <br /><br />
 
+          <label>Email</label>
+          <br />
+          <input type="email" name="email" />
+          <br /><br />
+
           <label>Passward</label>
           <br />
           <input type="password" name="password" />
